force-app/main/default/objects/Payment_Status__mdt/Payment_Status__mdt.object-meta.xml
<CustomObject>
    <label>Payment_Status</label>
    <pluralLabel>Payment_Statuses</pluralLabel>
</CustomObject>