force-app/main/default/objects/Payment_Status__mdt/fields/PAY_PCK_Description__c.field-meta.xml
<CustomField>
    <fullName>PAY_PCK_Description__c</fullName>
    <label>Payment description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending of my authorization</fullName>
                <default>true</default>
                <label>Pending of my authorization</label>
            </value>
            <value>
                <fullName>Pending authorization by others</fullName>
            </value>
            <value>
                <fullName>In review</fullName>
            </value>
            <value>
                <fullName>Scheduled last 7 days</fullName>
            </value>
            <value>
                <fullName>Completed last 7 days</fullName>
            </value>
            <value>
                <fullName>Rejected last 7 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>