force-app/main/default/objects/Payment_Status__mdt/fields/PAY_PCK_Status__c.field-meta.xml
<CustomField>
    <fullName>PAY_PCK_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Authorized</fullName>
                <default>true</default>
                <label>Authorized</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>In review</fullName>
            </value>
            <value>
                <fullName>Not authorized</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending of authorization</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>