force-app/main/default/objects/Payment_Status__mdt/fields/PAY_TXT_StatusCode__c.field-meta.xml
<CustomField>
    <fullName>PAY_TXT_StatusCode__c</fullName>
    <label>Status code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>